--- a/index.html
+++ b/index.html
@@ -3,21 +3,284 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Awesome App</title>
+    <title>SnapMarkup | Turn any Screenshot into Formatted Text. Instantly.</title>
     <style>
-        body { font-family: sans-serif; line-height: 1.6; padding: 2em; }
-        h1 { color: #333; }
+        /* --- Global Styles --- */
+        :root {
+            --primary-color: #0078d4; /* A nice, professional blue */
+            --dark-text: #2d3748;
+            --light-text: #4a5568;
+            --background-color: #f7fafc;
+            --card-background: #ffffff;
+            --border-color: #e2e8f0;
+        }
+
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+            margin: 0;
+            background-color: var(--background-color);
+            color: var(--dark-text);
+            line-height: 1.7;
+        }
+
+        /* --- Layout & Typography --- */
+        .container {
+            max-width: 960px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
+
+        section {
+            padding: 60px 0;
+        }
+
+        h1, h2, h3, h4 {
+            color: var(--dark-text);
+            font-weight: 700;
+            line-height: 1.3;
+        }
+
+        h1 { font-size: 2.5rem; text-align: center; }
+        h2 { font-size: 2rem; text-align: center; margin-bottom: 40px; }
+        h3 { font-size: 1.5rem; }
+        p { font-size: 1.1rem; color: var(--light-text); }
+        a { color: var(--primary-color); text-decoration: none; }
+        a:hover { text-decoration: underline; }
+
+        /* --- Hero Section --- */
+        .hero {
+            text-align: center;
+            padding-top: 80px;
+            padding-bottom: 80px;
+        }
+        .hero p {
+            font-size: 1.25rem;
+            max-width: 700px;
+            margin: 20px auto 30px auto;
+        }
+        .hero-image-wrapper {
+            margin-top: 40px;
+            padding: 10px;
+            background-color: var(--card-background);
+            border: 1px solid var(--border-color);
+            border-radius: 8px;
+            box-shadow: 0 10px 20px rgba(0,0,0,0.05);
+        }
+        .hero-image-wrapper img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 4px;
+        }
+        .cta-link {
+            display: inline-block;
+            background-color: var(--primary-color);
+            color: #fff;
+            padding: 15px 30px;
+            border-radius: 8px;
+            font-size: 1.1rem;
+            font-weight: 700;
+            text-decoration: none;
+            transition: background-color 0.2s;
+        }
+        .cta-link:hover {
+            background-color: #005a9e;
+            text-decoration: none;
+        }
+        
+        /* --- Features & Use Cases --- */
+        .features-grid, .use-cases-grid {
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+            gap: 30px;
+            margin-top: 40px;
+        }
+        .feature-card, .use-case-card {
+            background-color: var(--card-background);
+            border: 1px solid var(--border-color);
+            border-radius: 8px;
+            padding: 30px;
+            text-align: center;
+            flex-basis: 30%;
+            min-width: 280px;
+        }
+        .use-case-card img {
+            max-width: 100%;
+            border-radius: 4px;
+            margin-top: 20px;
+            border: 1px solid var(--border-color);
+        }
+
+        /* --- Pricing Section --- */
+        #pricing { background-color: #fff; }
+        .pricing-card {
+            max-width: 500px;
+            margin: 0 auto;
+            border: 2px solid var(--primary-color);
+            border-radius: 10px;
+            padding: 40px;
+            text-align: center;
+            box-shadow: 0 15px 30px rgba(0,0,0,0.1);
+        }
+        .pricing-card .price {
+            font-size: 3.5rem;
+            font-weight: 700;
+            color: var(--dark-text);
+            margin: 10px 0;
+        }
+        .pricing-card .billing-model {
+            font-weight: 700;
+            color: var(--primary-color);
+            margin-bottom: 30px;
+        }
+        .pricing-card ul {
+            list-style: none;
+            padding: 0;
+            margin: 0 0 40px 0;
+            text-align: left;
+        }
+        .pricing-card ul li {
+            margin-bottom: 15px;
+            font-size: 1.1rem;
+        }
+        .pricing-card ul li::before {
+            content: '✓';
+            color: #28a745; /* a nice green checkmark */
+            font-weight: 700;
+            margin-right: 10px;
+        }
+        .trust-badge {
+            margin-top: 20px;
+            font-size: 0.9rem;
+            color: var(--light-text);
+        }
+
+        /* --- FAQ Section --- */
+        .faq-item {
+            margin-bottom: 30px;
+            border-bottom: 1px solid var(--border-color);
+            padding-bottom: 20px;
+        }
+        .faq-item h4 {
+            margin-bottom: 10px;
+        }
+
+        /* --- Footer --- */
+        footer {
+            background-color: #e2e8f0;
+            color: var(--light-text);
+            text-align: center;
+            padding: 40px 20px;
+            font-size: 0.9rem;
+        }
+        footer p {
+            margin: 0 0 10px 0;
+            font-size: 0.9rem;
+        }
+        footer a {
+            color: var(--light-text);
+            font-weight: 600;
+        }
     </style>
 </head>
 <body>
-    <h1>欢迎来到 My Awesome App!</h1>
-    <p>这是我为 Windows 开发的一款非常棒的桌面应用。</p>
-    <p>在这里，您可以找到所有关于应用的信息、功能介绍以及购买方式。</p>
 
-    <hr>
+    <main>
+        <section class="hero container">
+            <h1>Turn any Screenshot into Formatted Text. Instantly.</h1>
+            <p>SnapMarkup is the essential tool for Windows that transforms complex formulas, layouts, and tables from images into ready-to-use LaTeX, Markdown, and rich text. Stop retyping. Start creating.</p>
+            <a href="#pricing" class="cta-link">Get SnapMarkup for Windows - $29.99</a>
+            <div class="hero-image-wrapper">
+                <img src="https://placehold.co/1600x900/0078d4/ffffff?text=SnapMarkup+App+Screenshot" alt="SnapMarkup Application Interface">
+            </div>
+        </section>
+
+        <section class="container">
+            <h2>How It Works</h2>
+            <div class="features-grid">
+                <div class="feature-card">
+                    <h3>1. Capture</h3>
+                    <p>Use a simple hotkey to capture any part of your screen. Formulas, tables, paragraphs—if you can see it, you can snap it.</p>
+                </div>
+                <div class="feature-card">
+                    <h3>2. Recognize</h3>
+                    <p>Our powerful OCR and AI engine instantly recognizes the content, intelligently structuring it into clean, usable, formatted text.</p>
+                </div>
+                <div class="feature-card">
+                    <h3>3. Copy & Paste</h3>
+                    <p>Copy the generated LaTeX, Markdown, or rich text with a single click and paste it directly into your favorite editor or platform.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="container">
+            <h2>Built for Professionals & Students</h2>
+            <div class="use-cases-grid">
+                <div class="use-case-card">
+                    <h3>Flawless LaTeX for Academics</h3>
+                    <p>No more tedious manual entry of equations. Generate perfect LaTeX code in seconds for your documents in Overleaf, TeXstudio, and more.</p>
+                    <img src="https://placehold.co/800x600/e2e8f0/2d3748?text=Math+Formula+Recognition" alt="Recognizing a math formula">
+                </div>
+                <div class="use-case-card">
+                    <h3>Perfect Markdown for Writers</h3>
+                    <p>Effortlessly convert tables and formatted text from any source into clean Markdown. Perfect for your documentation, tutorials, and blog posts.</p>
+                    <img src="https://placehold.co/800x600/e2e8f0/2d3748?text=Table+to+Markdown" alt="Converting a table to Markdown">
+                </div>
+            </div>
+        </section>
+        
+        <section id="pricing">
+            <div class="container">
+                <h2>Get SnapMarkup Today</h2>
+                <div class="pricing-card">
+                    <h3>SnapMarkup Pro</h3>
+                    <p class="price">$29.99</p>
+                    <p class="billing-model">One-Time Purchase, Lifetime License</p>
+                    <ul>
+                        <li>Unlimited Screen Captures</li>
+                        <li>LaTeX, Markdown & Rich Text Output</li>
+                        <li>Advanced Table & Formula Recognition</li>
+                        <li>Lifetime Updates</li>
+                        <li>Priority Email Support</li>
+                    </ul>
+                    <a href="#" class="cta-link">Buy Now & Get Instant Access</a>
+                    <p class="trust-badge">Secure payment processing by our merchant of record, Paddle.com.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="container">
+            <h2>Frequently Asked Questions</h2>
+            <div class="faq-item">
+                <h4>Is this a one-time purchase or a subscription?</h4>
+                <p>It's a one-time purchase! You pay once and own SnapMarkup forever, including all future updates. No hidden fees, no subscriptions.</p>
+            </div>
+            <div class="faq-item">
+                <h4>How do I receive my license key?</h4>
+                <p>Your license key will be delivered to your email address immediately after your purchase is completed by our partner, Paddle.com.</p>
+            </div>
+            <div class="faq-item">
+                <h4>What versions of Windows are supported?</h4>
+                <p>SnapMarkup is fully compatible with Windows 10 and Windows 11.</p>
+            </div>
+            <div class="faq-item">
+                <h4>What if I get a new computer?</h4>
+                <p>You can easily deactivate your license on your old computer and activate it on your new one through our license management system.</p>
+            </div>
+        </section>
+    </main>
+
     <footer>
-        <p><a href="#">服务条款</a> | <a href="#">隐私政策</a> | <a href="#">退款政策</a></p>
-        <p>&copy; 2025 Your Name or Company. All rights reserved.</p>
+        <div class="container">
+            <p>
+                <a href="#">Terms of Service</a> | 
+                <a href="#">Privacy Policy</a> | 
+                <a href="#">Refund Policy</a>
+            </p>
+            <p>Contact Us: <a href="mailto:support@snapmarkup.com">support@snapmarkup.com</a></p>
+            <p>&copy; 2025 SnapMarkup. All rights reserved.</p>
+        </div>
     </footer>
+
 </body>
 </html>
