--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
    <section class="hero container">
     <h1>Turn any Screenshot into Formatted Text. Instantly.</h1>
     <p>SnapMarkup is the essential tool for Windows that transforms complex formulas, layouts, and tables from images into ready-to-use LaTeX, Markdown, and rich text. Stop retyping. Start creating.</p>
-    <a href="#pricing" class="cta-link">Get SnapMarkup for Windows - $29.99</a>
+    <a href="https://sandbox-pay.paddle.io/hsc_01k1gef4t0sf57nzfpxadxhj6f_z7hq2nax2h1pr3p3708qkp5arh0q1z4w" class="cta-link">Get SnapMarkup Pro $2.99</a>
     <div class="hero-image-container">
      <div class="hero-image-wrapper">
       <img src="https://www.whatsnapai.com/screenshot1.png" alt="SnapMarkup Application Interface 1">
