--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
- <html lang="en">
+ <html lang="zh-CN">
  <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SnapMarkup | Turn any Screenshot into Formatted Text. Instantly.</title>
+  <title>SnapMarkup | 截图即刻转为格式化文本</title>
   <style>
   /* --- Global Styles --- */
   :root {
@@ -63,6 +63,7 @@
    display: flex;
    justify-content: center;
    gap: 20px;
+   flex-wrap: wrap; /* 允许在小屏幕上换行 */
   }
   .hero-image-wrapper {
    padding: 10px;
@@ -71,7 +72,7 @@
    border-radius: 8px;
    box-shadow: 0 10px 20px rgba(0,0,0,0.05);
    flex: 1;
-   min-width: 0; /* Required for flex-basis to be respected with long content */
+   min-width: 280px; /* 保证在小屏幕上不会被过度挤压 */
   }
   .hero-image-wrapper img {
    max-width: 100%;
@@ -93,6 +94,11 @@
   .cta-link:hover {
    background-color: #005a9e;
    text-decoration: none;
+  }
+  .trial-note {
+      margin-top: 15px;
+      font-size: 0.9rem;
+      color: var(--light-text);
   }
 
   /* --- Features & Use Cases --- */
@@ -136,9 +142,14 @@
    color: var(--dark-text);
    margin: 10px 0;
   }
+    .pricing-card .price span {
+        font-size: 1.5rem;
+        font-weight: 400;
+        color: var(--light-text);
+    }
   .pricing-card .billing-model {
-   font-weight: 700;
-   color: var(--primary-color);
+   font-weight: 600;
+   color: var(--light-text);
    margin-bottom: 30px;
   }
   .pricing-card ul {
@@ -195,93 +206,94 @@
 
   <main>
    <section class="hero container">
-    <h1>Turn any Screenshot into Formatted Text. Instantly.</h1>
-    <p>SnapMarkup is the essential tool for Windows that transforms complex formulas, layouts, and tables from images into ready-to-use LaTeX, Markdown, and rich text. Stop retyping. Start creating.</p>
-    <a href="https://sandbox-pay.paddle.io/hsc_01k1gef4t0sf57nzfpxadxhj6f_z7hq2nax2h1pr3p3708qkp5arh0q1z4w" class="cta-link">Get SnapMarkup Pro $2.99</a>
+    <h1>截图即刻转为格式化文本</h1>
+    <p>SnapMarkup 是一款强大的 Windows 工具，能将图片中的复杂公式、布局和表格智能转换为多种随时可用的专业文档格式，从 Markdown、LaTeX 到 HTML、XML，乃至 AsciiDoc 等等。告别重复输入，即刻开始创作。</p>
+    <a href="#" class="cta-link">免费下载</a>
+    <p class="trial-note">无需信用卡，免费试用10次</p>
     <div class="hero-image-container">
      <div class="hero-image-wrapper">
-      <img src="https://www.whatsnapai.com/screenshot1.png" alt="SnapMarkup Application Interface 1">
+      <img src="https://www.whatsnapai.com/screenshot1.png" alt="SnapMarkup 应用界面 1">
      </div>
      <div class="hero-image-wrapper">
-      <img src="https://www.whatsnapai.com/screenshot2.png" alt="SnapMarkup Application Interface 2">
+      <img src="https://www.whatsnapai.com/screenshot2.png" alt="SnapMarkup 应用界面 2">
      </div>
      <div class="hero-image-wrapper">
-      <img src="https://www.whatsnapai.com/screenshot3.png" alt="SnapMarkup Application Interface 3">
+      <img src="https://www.whatsnapai.com/screenshot3.png" alt="SnapMarkup 应用界面 3">
      </div>
     </div>
    </section>
 
    <section class="container">
-    <h2>How It Works</h2>
+    <h2>工作原理</h2>
     <div class="features-grid">
      <div class="feature-card">
-      <h3>1. Capture</h3>
-      <p>Use a simple hotkey to capture any part of your screen. Formulas, tables, paragraphs—if you can see it, you can snap it.</p>
+      <h3>1. 截取</h3>
+      <p>使用快捷键轻松截取屏幕的任何部分。无论是公式、表格还是段落，所见即可截取。</p>
      </div>
      <div class="feature-card">
-      <h3>2. Recognize</h3>
-      <p>Our powerful OCR and AI engine instantly recognizes the content, intelligently structuring it into clean, usable, formatted text.</p>
+      <h3>2. 识别</h3>
+      <p>我们强大的人工智能引擎会即刻识别内容，并将其智能地结构化为干净、可用的格式化文本。</p>
      </div>
      <div class="feature-card">
-      <h3>3. Copy & Paste</h3>
-      <p>Copy the generated LaTeX, Markdown, or rich text with a single click and paste it directly into your favorite editor or platform.</p>
+      <h3>3. 复制粘贴</h3>
+      <p>一键复制您需要的任何输出格式——无论是 Markdown、LaTeX 还是 HTML——并将其直接粘贴到您最喜欢的编辑器或平台中。</p>
      </div>
     </div>
    </section>
 
    <section class="container">
-    <h2>Built for Professionals & Students</h2>
+    <h2>为专业人士和学生打造</h2>
     <div class="use-cases-grid">
      <div class="use-case-card">
-      <h3>Flawless LaTeX for Academics</h3>
-      <p>No more tedious manual entry of equations. Generate perfect LaTeX code in seconds for your documents in Overleaf, TeXstudio, and more.</p>
-      <img src="https://placehold.co/800x600/e2e8f0/2d3748?text=Math+Formula+Recognition" alt="Recognizing a math formula">
+      <h3>完美的学术 LaTeX</h3>
+      <p>告别繁琐的公式手动输入。在数秒内为您的 Overleaf 或 TeXstudio 文档生成完美的 LaTeX 代码。</p>
+      <img src="https://www.whatsnapai.com/ad_image_800_2.png" alt="识别数学公式">
      </div>
      <div class="use-case-card">
-      <h3>Perfect Markdown for Writers</h3>
-      <p>Effortlessly convert tables and formatted text from any source into clean Markdown. Perfect for your documentation, tutorials, and blog posts.</p>
-      <img src="https://placehold.co/800x600/e2e8f0/2d3748?text=Table+to+Markdown" alt="Converting a table to Markdown">
+      <h3>简洁的 Markdown 写作</h3>
+      <p>轻松地将任何来源的表格和格式化文本转换为干净的 Markdown，完美适用于您的技术文档、教程和博客文章。</p>
+      <img src="https://www.whatsnapai.com/ad_image_800_1.png" alt="转换表格为Markdown">
      </div>
     </div>
    </section>
 
    <section id="pricing">
     <div class="container">
-     <h2>Get SnapMarkup Today</h2>
+     <h2>灵活的订阅方案</h2>
      <div class="pricing-card">
       <h3>SnapMarkup Pro</h3>
-      <p class="price">$29.99</p>
-      <p class="billing-model">One-Time Purchase, Lifetime License</p>
+      <p class="price">$2.99<span>/月</span></p>
+      <p class="billing-model">10次免费试用结束后开始计费，可随时取消</p>
       <ul>
-       <li>Unlimited Screen Captures</li>
-       <li>LaTeX, Markdown & Rich Text Output</li>
-       <li>Advanced Table & Formula Recognition</li>
-       <li>Lifetime Updates</li>
-       <li>Priority Email Support</li>
+       <li>无限次屏幕截取</li>
+       <li>支持多种专业格式导出 (Markdown, LaTeX, HTML+)</li>
+       <li>高级表格与公式识别</li>
+       <li>持续的版本更新</li>
+       <li>优先邮件支持</li>
       </ul>
-      <a href="#" class="cta-link">Buy Now & Get Instant Access</a>
-      <p class="trust-badge">Secure payment processing by our merchant of record, Paddle.com.</p>
+      <a href="https://sandbox-pay.paddle.io/hsc_01k1gef4t0sf57nzfpxadxhj6f_z7hq2nax2h1pr3p3708qkp5arh0q1z4w" target="_blank" class="cta-link">升级到 Pro 版本</a>
+      <p class="trust-badge">由我们的合作伙伴 Paddle.com 提供安全的支付处理。</p> 
      </div>
     </div>
    </section>
 
    <section class="container">
-    <h2>Frequently Asked Questions</h2>
+    <h2>常见问题</h2>
     <div class="faq-item">
-     <h4>Is this a one-time purchase or a subscription?</h4>
-     <p>It's a one-time purchase! You pay once and own SnapMarkup forever, including all future updates. No hidden fees, no subscriptions.</p>
+     <h4>SnapMarkup 是如何收费的？</h4>
+     <p>您可以免费下载并使用 SnapMarkup 10次。试用结束后，您可以选择订阅 Pro 版本以继续使用所有高级功能。我们提供灵活的订阅方案，并可以随时取消。</p>
     </div>
     <div class="faq-item">
-     <h4>How do I receive my license key?</h4>
-     <p>Your license key will be delivered to your email address immediately after your purchase is completed by our partner, Paddle.com.</p>
+     <h4>我如何收到我的许可证密钥？</h4>
+     <p>在您完成订阅后，您的许可证密钥将立即由我们的合作伙伴 Paddle.com 发送到您的电子邮箱地址。</p>
     </div>
     <div class="faq-item">
-     <h4>What versions of Windows are supported?</h4>
-     <p>SnapMarkup is fully compatible with Windows 10 and Windows 11.</p>
+     <h4>支持哪些 Windows 版本？</h4>
+     <p>SnapMarkup 完全兼容 Windows 10 和 Windows 11。</p>
     </div>
     <div class="faq-item">
-     <h4>What if I get a new computer?</h4>
-     <p>You can easily deactivate your license on your old computer and activate it on your new one through our license management system.</p>
+     <h4>如果我换了一台新电脑怎么办？</h4>
+     <p>您可以通过我们的许可证管理系统，轻松地在旧电脑上停用您的许可证，然后在您的新电脑上激活它。</p>
     </div>
    </section>
   </main>
@@ -289,12 +301,13 @@
   <footer>
    <div class="container">
     <p>
-     <a href="#">Terms of Service</a> |
-     <a href="#">Privacy Policy</a> |
-     <a href="#">Refund Policy</a>
+     <a href="#">服务条款</a> |
+     <a href="#">隐私政策</a> |
+     <a href="#">退款政策</a> |
+     <a href="#">管理许可证</a>
     </p>
-    <p>Contact Us: <a href="mailto:support@snapmarkup.com">support@snapmarkup.com</a></p>
-    <p>&copy; 2025 SnapMarkup. All rights reserved.</p>
+    <p>联系我们: <a href="mailto:support@snapmarkup.com">support@snapmarkup.com</a></p>
+    <p>&copy; 2025 SnapMarkup. 保留所有权利。</p>
    </div>
   </footer>
 
