--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
     <p>
      <a href="#">服务条款</a> |
      <a href="#">隐私政策</a> |
-     <a href="#">退款政策</a> |
+     <a href="https://www.whatsnapai.com/management_subscription.html" target="_blank">退款政策</a> |
      <a href="#">管理许可证</a>
     </p>
     <p>联系我们: <a href="mailto:support@snapmarkup.com">support@snapmarkup.com</a></p>
