--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
      <a href="https://www.whatsnapai.com/management_subscription.html" target="_blank">退款政策</a> |
      <a href="#">管理许可证</a>
     </p>
-    <p>联系我们: <a href="mailto:support@snapmarkup.com">support@snapmarkup.com</a></p>
+    <p>联系我们: <a href="mailto:support@whatsnapai.com">support@whatsnapai.com</a></p>
     <p>&copy; 2025 SnapMarkup. 保留所有权利。</p>
    </div>
   </footer>
