--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -114,7 +114,7 @@
         <h2>7. 联系我们</h2>
         <p>如果您对本隐私政策或我们对您个人数据的处理有任何疑问，欢迎随时通过以下方式与我们联系：</p>
         <p style="text-align: center; margin: 20px 0;">
-            <a href="mailto:support@snapmarkup.com"><strong>support@snapmarkup.com</strong></a>
+            <a href="mailto:support@whatsnapai.com"><strong>support@whatsnapai.com</strong></a>
         </p>
     </div>
 </body>
