--- a/index.html
+++ b/index.html
@@ -301,10 +301,10 @@
   <footer>
    <div class="container">
     <p>
-     <a href="#">服务条款</a> |
-     <a href="#">隐私政策</a> |
-     <a href="https://www.whatsnapai.com/management_subscription.html" target="_blank">退款政策</a> |
-     <a href="#">管理许可证</a>
+     <a href="https://www.whatsnapai.com/terms_of_service.html">服务条款</a> |
+     <a href="https://www.whatsnapai.com/privacy_policy.html">隐私政策</a> |
+     <a href="https://www.whatsnapai.com/refund_policy.html">退款政策</a> |
+     <a href="https://www.whatsnapai.com/management_subscription.html">管理许可证</a>
     </p>
     <p>联系我们: <a href="mailto:support@whatsnapai.com">support@whatsnapai.com</a></p>
     <p>&copy; 2025 SnapMarkup. 保留所有权利。</p>
