--- a/terms_of_service.html
+++ b/terms_of_service.html
@@ -63,7 +63,7 @@
         <p class="meta-info">最后更新：2025年8月1日</p>
 
         <h3>1. 协议概述</h3>
-        <p>本服务条款（“条款”）构成您（“用户”）与 [您的公司或个人名称]（“我们”、“我方”）之间关于您使用 SnapMarkup 软件（“本软件”）的法律协议。通过下载、安装或使用本软件，即表示您同意受本条款的约束。如果您不同意本条款，请勿使用本软件。</p>
+        <p>本服务条款（“条款”）构成您（“用户”）与whatsnapai（“我们”、“我方”）之间关于您使用 SnapMarkup 软件（“本软件”）的法律协议。通过下载、安装或使用本软件，即表示您同意受本条款的约束。如果您不同意本条款，请勿使用本软件。</p>
 
         <h2>2. 许可证授予</h2>
         <p>根据本条款，我们授予您一个有限的、非独占的、不可转让的、可撤销的许可证，以在您拥有或控制的设备上安装和使用本软件，仅供您个人或内部商业使用。</p>
@@ -85,7 +85,7 @@
         </ul>
 
         <h2>6. 知识产权</h2>
-        <p>本软件及其所有副本的所有权、所有权权利和知识产权（包括但不限于所有版权、专利、商标和商业秘密）均归 [您的公司或个人名称] 所有。本条款并未将本软件的任何所有权转让给您，仅授予您有限的使用权。</p>
+        <p>本软件及其所有副本的所有权、所有权权利和知识产权（包括但不限于所有版权、专利、商标和商业秘密）均归whatsnapai 所有。本条款并未将本软件的任何所有权转让给您，仅授予您有限的使用权。</p>
 
         <h2>7. 终止</h2>
         <p>如果您未能遵守本条款中的任何规定，本协议将自动终止。协议终止后，您必须立即停止使用本软件并销毁其所有副本。</p>
