--- a/index.html
+++ b/index.html
@@ -292,9 +292,9 @@
      <p>SnapMarkup 完全兼容 Windows 10 和 Windows 11。</p>
     </div>
     <div class="faq-item">
-     <h4>如果我换了一台新电脑怎么办？</h4>
-     <p>您可以通过我们的许可证管理系统，轻松地在旧电脑上停用您的许可证，然后在您的新电脑上激活它。</p>
-    </div>
+      <h4>如果我换了一台新电脑怎么办？</h4>
+      <p>您的 Pro 权限与您的订阅绑定。您只需在新电脑上安装本软件，并使用同一个许可证密钥激活即可。每份订阅允许在合理数量的个人设备上同时激活。您随时可以通过我们的“管理许可证”页面查看和管理您已激活的设备。</p>
+   </div>
    </section>
   </main>
 
