--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SnapMarkup | 截图即刻转为格式化文本</title>
+  <title>SnapMark | 截图即刻转为格式化文本</title>
   <style>
   /* --- Global Styles --- */
   :root {
@@ -207,18 +207,18 @@
   <main>
    <section class="hero container">
     <h1>截图即刻转为格式化文本</h1>
-    <p>SnapMarkup 是一款强大的 Windows 工具，能将图片中的复杂公式、布局和表格智能转换为多种随时可用的专业文档格式，从 Markdown、LaTeX 到 HTML、XML，乃至 AsciiDoc 等等。告别重复输入，即刻开始创作。</p>
+    <p>SnapMark 是一款强大的 Windows 工具，能将图片中的复杂公式、布局和表格智能转换为多种随时可用的专业文档格式，从 Markdown、LaTeX 到 HTML、XML，乃至 AsciiDoc 等等。告别重复输入，即刻开始创作。</p>
     <a href="#" class="cta-link">免费下载</a>
     <p class="trial-note">无需信用卡，免费试用10次</p>
     <div class="hero-image-container">
      <div class="hero-image-wrapper">
-      <img src="https://www.whatsnapai.com/screenshot1.png" alt="SnapMarkup 应用界面 1">
+      <img src="https://www.whatsnapai.com/screenshot1.png" alt="SnapMark 应用界面 1">
      </div>
      <div class="hero-image-wrapper">
-      <img src="https://www.whatsnapai.com/screenshot2.png" alt="SnapMarkup 应用界面 2">
+      <img src="https://www.whatsnapai.com/screenshot2.png" alt="SnapMark 应用界面 2">
      </div>
      <div class="hero-image-wrapper">
-      <img src="https://www.whatsnapai.com/screenshot3.png" alt="SnapMarkup 应用界面 3">
+      <img src="https://www.whatsnapai.com/screenshot3.png" alt="SnapMark 应用界面 3">
      </div>
     </div>
    </section>
@@ -261,7 +261,7 @@
     <div class="container">
      <h2>灵活的订阅方案</h2>
      <div class="pricing-card">
-      <h3>SnapMarkup Pro</h3>
+      <h3>SnapMark Pro</h3>
       <p class="price">$2.99<span>/月</span></p>
       <p class="billing-model">10次免费试用结束后开始计费，可随时取消</p>
       <ul>
@@ -280,8 +280,8 @@
    <section class="container">
     <h2>常见问题</h2>
     <div class="faq-item">
-     <h4>SnapMarkup 是如何收费的？</h4>
-     <p>您可以免费下载并使用 SnapMarkup 10次。试用结束后，您可以选择订阅 Pro 版本以继续使用所有高级功能。我们提供灵活的订阅方案，并可以随时取消。</p>
+     <h4>SnapMark 是如何收费的？</h4>
+     <p>您可以免费下载并使用 SnapMark 10次。试用结束后，您可以选择订阅 Pro 版本以继续使用所有高级功能。我们提供灵活的订阅方案，并可以随时取消。</p>
     </div>
     <div class="faq-item">
      <h4>我如何收到我的许可证密钥？</h4>
@@ -289,7 +289,7 @@
     </div>
     <div class="faq-item">
      <h4>支持哪些 Windows 版本？</h4>
-     <p>SnapMarkup 完全兼容 Windows 10 和 Windows 11。</p>
+     <p>SnapMark 完全兼容 Windows 10 和 Windows 11。</p>
     </div>
     <div class="faq-item">
       <h4>如果我换了一台新电脑怎么办？</h4>
@@ -307,7 +307,7 @@
      <a href="https://www.whatsnapai.com/management_subscription.html">管理许可证</a>
     </p>
     <p>联系我们: <a href="mailto:support@whatsnapai.com">support@whatsnapai.com</a></p>
-    <p>&copy; 2025 SnapMarkup. 保留所有权利。</p>
+    <p>&copy; 2025 SnapMark. 保留所有权利。</p>
    </div>
   </footer>
 
