--- a/management_subscription.html
+++ b/management_subscription.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SnapMarkup | 管理订阅</title>
+    <title>SnapMark | 管理订阅</title>
     <style>
         body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; margin: 0; padding: 40px 20px; background-color: #f7fafc; color: #2d3748; display: flex; justify-content: center; }
         .container { background-color: #fff; border: 1px solid #e2e8f0; border-radius: 10px; padding: 40px; box-shadow: 0 10px 25px rgba(0,0,0,0.07); max-width: 450px; width: 100%; text-align: center; }
