--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>隐私政策 | SnapMarkup</title>
+    <title>隐私政策 | SnapMark</title>
     <style>
         :root {
             --primary-color: #0078d4;
@@ -69,7 +69,7 @@
         <p class="meta-info">最后更新：2025年8月1日</p>
 
         <h3>引言</h3>
-        <p>欢迎使用 SnapMarkup！我们尊重您的隐私，并致力于保护您的个人数据。本隐私政策将告知您，当您访问我们的网站或使用我们的服务时，我们如何处理您的个人数据，并告知您所享有的隐私权利以及法律如何保护您。</p>
+        <p>欢迎使用 SnapMark！我们尊重您的隐私，并致力于保护您的个人数据。本隐私政策将告知您，当您访问我们的网站或使用我们的服务时，我们如何处理您的个人数据，并告知您所享有的隐私权利以及法律如何保护您。</p>
 
         <h2>1. 我们收集的数据类型</h2>
         <p>我们可能会收集、使用、存储和传输关于您的不同类型的个人数据，具体如下：</p>
