--- a/refund_policy.html
+++ b/refund_policy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>退款政策 | SnapMarkup</title>
+    <title>退款政策 | SnapMark</title>
     <style>
         :root {
             --primary-color: #0078d4;
@@ -59,13 +59,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>SnapMarkup 退款政策</h1>
+        <h1>SnapMark 退款政策</h1>
         <p class="meta-info">最后更新：2025年8月1日</p>
 
-        <p>感谢您选择 SnapMarkup。我们致力于提供卓越的产品与服务，并希望您对购买感到完全满意。如果您因任何原因不满意，我们愿意提供帮助。</p>
+        <p>感谢您选择 SnapMark。我们致力于提供卓越的产品与服务，并希望您对购买感到完全满意。如果您因任何原因不满意，我们愿意提供帮助。</p>
 
         <h2>14天退款保证</h2>
-        <p>我们为所有首次购买 SnapMarkup Pro 订阅的用户提供 **14天无理由退款保证**。</p>
+        <p>我们为所有首次购买 SnapMark Pro 订阅的用户提供 **14天无理由退款保证**。</p>
         <p>如果您在购买订阅后的 **14天内** 发现产品不符合您的期望，您可以申请全额退款。退款期限从您支付成功的当天开始计算。</p>
 
         <h2>退款资格</h2>
@@ -88,7 +88,7 @@
 
         <h2>退款处理</h2>
         <p>在收到您的退款请求后，我们将在2个工作日内进行审核。一经批准，退款将由我们的支付合作伙伴 Paddle.com 立即处理。退款金额通常需要 **5-10个工作日** 才能显示在您的银行或信用卡对账单上，具体时间取决于您的发卡银行。</p>
-        <p>退款成功后，您账户关联的 SnapMarkup Pro 许可证密钥将被停用。</p>
+        <p>退款成功后，您账户关联的 SnapMark Pro 许可证密钥将被停用。</p>
 
         <h2>联系我们</h2>
         <p>如果您对我们的退款政策有任何疑问，欢迎随时通过 <a href="mailto:support@whatsnapai.com">support@whatsnapai.com</a> 与我们联系。</p>
