--- a/terms_of_service.html
+++ b/terms_of_service.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>服务条款 | SnapMarkup</title>
+    <title>服务条款 | SnapMark</title>
     <style>
         :root {
             --primary-color: #0078d4;
@@ -63,7 +63,7 @@
         <p class="meta-info">最后更新：2025年8月1日</p>
 
         <h3>1. 协议概述</h3>
-        <p>本服务条款（“条款”）构成您（“用户”）与whatsnapai（“我们”、“我方”）之间关于您使用 SnapMarkup 软件（“本软件”）的法律协议。通过下载、安装或使用本软件，即表示您同意受本条款的约束。如果您不同意本条款，请勿使用本软件。</p>
+        <p>本服务条款（“条款”）构成您（“用户”）与whatsnapai（“我们”、“我方”）之间关于您使用 SnapMark 软件（“本软件”）的法律协议。通过下载、安装或使用本软件，即表示您同意受本条款的约束。如果您不同意本条款，请勿使用本软件。</p>
 
         <h2>2. 许可证授予</h2>
         <p>根据本条款，我们授予您一个有限的、非独占的、不可转让的、可撤销的许可证，以在您拥有或控制的设备上安装和使用本软件，仅供您个人或内部商业使用。</p>
@@ -72,7 +72,7 @@
         <p>我们为本软件提供10次免费试用。试用期旨在让您在购买前评估本软件的功能。试用期结束后，您需要购买 Pro 版本订阅才能继续使用本软件的全部功能。</p>
 
         <h2>4. 付费订阅与付款</h2>
-        <p>当您从免费试用升级到 SnapMarkup Pro 时，您同意支付相应的订阅费用。所有付款均由我们的第三方支付合作伙伴 Paddle.com 处理。通过提供支付信息，您同意受 Paddle 的条款和政策约束。订阅将按您选择的周期（例如，按月或按年）自动续订，除非在当前订阅期结束前取消。</p>
+        <p>当您从免费试用升级到 SnapMark Pro 时，您同意支付相应的订阅费用。所有付款均由我们的第三方支付合作伙伴 Paddle.com 处理。通过提供支付信息，您同意受 Paddle 的条款和政策约束。订阅将按您选择的周期（例如，按月或按年）自动续订，除非在当前订阅期结束前取消。</p>
 
         <h2>5. 可接受的使用行为</h2>
         <p>您同意不以下列方式使用本软件：</p>
