--- a/thanks.html
+++ b/thanks.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>订阅成功！| SnapMarkup</title>
+    <title>订阅成功！| SnapMark</title>
     <style>
         /* --- (您的CSS样式保持不变，此处省略以保持简洁) --- */
         :root { --primary-color: #0078d4; --dark-text: #2d3748; --light-text: #4a5568; --background-color: #f7fafc; --card-background: #ffffff; --border-color: #e2e8f0; }
@@ -36,11 +36,11 @@
         <div class="container">
             <div class="success-card">
                 <h2>🎉 订阅成功！</h2>
-                <p>感谢您订阅 SnapMarkup Pro！我们已将您的**许可证密钥**和**订单收据**发送至您的邮箱，请注意查收并开始使用吧！</p>
+                <p>感谢您订阅 SnapMark Pro！我们已将您的**许可证密钥**和**订单收据**发送至您的邮箱，请注意查收并开始使用吧！</p>
 
                 <div class="success-details">
                     <ul>
-                        <li><strong>订阅方案:</strong> SnapMarkup Pro</li>
+                        <li><strong>订阅方案:</strong> SnapMark Pro</li>
                         <li><strong>确认邮箱:</strong> <span id="customerEmail"></span></li>
                         <li><strong>订单号:</strong> <span id="transactionId"></span></li>
                     </ul>
@@ -55,7 +55,7 @@
 
     <footer>
         <div class="container">
-            <p>© 2025 SnapMarkup. 保留所有权利。</p>
+            <p>© 2025 SnapMark. 保留所有权利。</p>
         </div>
     </footer>
 
