--- a/index.html
+++ b/index.html
@@ -117,6 +117,10 @@
    text-align: center;
    flex-basis: 30%;
    min-width: 280px;
+
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
   }
   .use-case-card img {
    max-width: 100%;
