--- a/index.html
+++ b/index.html
@@ -270,13 +270,13 @@
       <p class="price">$2.99<span>/月</span></p>
       <p class="billing-model">10次免费试用结束后开始计费，可随时取消</p>
       <ul>
-       <li>无限次屏幕截取</li>
+       <li>每日高达 100 次屏幕截取</li>
        <li>支持多种专业格式导出 (Markdown, LaTeX, HTML+)</li>
        <li>高级表格与公式识别</li>
        <li>持续的版本更新</li>
        <li>优先邮件支持</li>
       </ul>
-      <a href="https://sandbox-pay.paddle.io/hsc_01k1gef4t0sf57nzfpxadxhj6f_z7hq2nax2h1pr3p3708qkp5arh0q1z4w" target="_blank" class="cta-link">升级到 Pro 版本</a>
+      <a href="https://pay.paddle.io/hsc_01k1n86j8asnyxjnkexm8m6xya_1x9et8994hydd1q07mhqx1f6c6b9ay32" target="_blank" class="cta-link">升级到 Pro 版本</a>
       <p class="trust-badge">由我们的合作伙伴 Paddle.com 提供安全的支付处理。</p> 
      </div>
     </div>
@@ -309,7 +309,7 @@
      <a href="https://www.whatsnapai.com/terms_of_service.html">服务条款</a> |
      <a href="https://www.whatsnapai.com/privacy_policy.html">隐私政策</a> |
      <a href="https://www.whatsnapai.com/refund_policy.html">退款政策</a> |
-     <a href="https://www.whatsnapai.com/management_subscription.html">管理许可证</a>
+     <a href="https://customer-portal.paddle.com/login/cpl_01k1f723kfp8tmq6rn7d3yvwsv" target="_blank">管理许可证</a>
     </p>
     <p>联系我们: <a href="mailto:support@whatsnapai.com">support@whatsnapai.com</a></p>
     <p>&copy; 2025 SnapMark. 保留所有权利。</p>
