--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
- <html lang="zh-CN">
+ <html lang="en">
  <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SnapMark | 截图即刻转为格式化文本</title>
+  <title>SnapMark | Instantly Convert Screenshots to Formatted Text</title>
   <link rel="icon" href="/favicon.png" type="image/png">
   <style>
   /* --- Global Styles --- */
@@ -64,7 +64,7 @@
    display: flex;
    justify-content: center;
    gap: 20px;
-   flex-wrap: wrap; /* 允许在小屏幕上换行 */
+   flex-wrap: wrap; /* Allows wrapping on smaller screens */
   }
   .hero-image-wrapper {
    padding: 10px;
@@ -73,7 +73,7 @@
    border-radius: 8px;
    box-shadow: 0 10px 20px rgba(0,0,0,0.05);
    flex: 1;
-   min-width: 280px; /* 保证在小屏幕上不会被过度挤压 */
+   min-width: 280px; /* Ensures it doesn't get too squished on small screens */
   }
   .hero-image-wrapper img {
    max-width: 100%;
@@ -211,94 +211,94 @@
 
   <main>
    <section class="hero container">
-    <h1>截图即刻转为格式化文本</h1>
-    <p>SnapMark 是一款强大的 Windows 工具，能将图片中的复杂公式、布局和表格智能转换为多种随时可用的专业文档格式，从 Markdown、LaTeX 到 HTML、XML，乃至 AsciiDoc 等等。告别重复输入，即刻开始创作。</p>
-    <a href="#" class="cta-link">免费下载</a>
-    <p class="trial-note">无需信用卡，免费试用10次</p>
+    <h1>Instantly Convert Screenshots to Formatted Text</h1>
+    <p>SnapMark is a powerful Windows tool that intelligently converts complex formulas, layouts, and tables from images into a variety of ready-to-use professional document formats, from Markdown and LaTeX to HTML, XML, AsciiDoc, and more. Say goodbye to retyping and start creating instantly.</p>
+    <a href="https://storage.googleapis.com/snapmark-installers/SnapmarkWinui_1.2.14.0_x64.msix" class="cta-link">Free Download</a>
+    <p class="trial-note">No credit card required, 10 free trials</p>
     <div class="hero-image-container">
      <div class="hero-image-wrapper">
-      <img src="https://www.whatsnapai.com/screenshot1.png" alt="SnapMark 应用界面 1">
+      <img src="https://www.whatsnapai.com/screenshot1.png" alt="SnapMark App Interface 1">
      </div>
      <div class="hero-image-wrapper">
-      <img src="https://www.whatsnapai.com/screenshot2.png" alt="SnapMark 应用界面 2">
+      <img src="https://www.whatsnapai.com/screenshot2.png" alt="SnapMark App Interface 2">
      </div>
      <div class="hero-image-wrapper">
-      <img src="https://www.whatsnapai.com/screenshot3.png" alt="SnapMark 应用界面 3">
+      <img src="https://www.whatsnapai.com/screenshot3.png" alt="SnapMark App Interface 3">
      </div>
     </div>
    </section>
 
    <section class="container">
-    <h2>工作原理</h2>
+    <h2>How It Works</h2>
     <div class="features-grid">
      <div class="feature-card">
-      <h3>1. 截取</h3>
-      <p>使用快捷键轻松截取屏幕的任何部分。无论是公式、表格还是段落，所见即可截取。</p>
+      <h3>1. Capture</h3>
+      <p>Easily capture any part of your screen with a hotkey. Whether it's a formula, a table, or a paragraph, what you see is what you get.</p>
      </div>
      <div class="feature-card">
-      <h3>2. 识别</h3>
-      <p>我们强大的人工智能引擎会即刻识别内容，并将其智能地结构化为干净、可用的格式化文本。</p>
+      <h3>2. Recognize</h3>
+      <p>Our powerful AI engine instantly recognizes the content and intelligently structures it into clean, usable formatted text.</p>
      </div>
      <div class="feature-card">
-      <h3>3. 复制粘贴</h3>
-      <p>一键复制您需要的任何输出格式——无论是 Markdown、LaTeX 还是 HTML——并将其直接粘贴到您最喜欢的编辑器或平台中。</p>
+      <h3>3. Copy & Paste</h3>
+      <p>One-click copy any output format you need—be it Markdown, LaTeX, or HTML—and paste it directly into your favorite editor or platform.</p>
      </div>
     </div>
    </section>
 
    <section class="container">
-    <h2>为专业人士和学生打造</h2>
+    <h2>Built for Professionals and Students</h2>
     <div class="use-cases-grid">
      <div class="use-case-card">
-      <h3>完美的学术 LaTeX</h3>
-      <p>告别繁琐的公式手动输入。在数秒内为您的 Overleaf 或 TeXstudio 文档生成完美的 LaTeX 代码。</p>
-      <img src="https://www.whatsnapai.com/ad_image_800_2.png" alt="识别数学公式">
+      <h3>Perfect Academic LaTeX</h3>
+      <p>Say goodbye to tedious manual formula entry. Generate perfect LaTeX code for your Overleaf or TeXstudio documents in seconds.</p>
+      <img src="https://www.whatsnapai.com/ad_image_800_2.png" alt="Recognizing Math Formulas">
      </div>
      <div class="use-case-card">
-      <h3>简洁的 Markdown 写作</h3>
-      <p>轻松地将任何来源的表格和格式化文本转换为干净的 Markdown，完美适用于您的技术文档、教程和博客文章。</p>
-      <img src="https://www.whatsnapai.com/ad_image_800_1.png" alt="转换表格为Markdown">
+      <h3>Effortless Markdown Writing</h3>
+      <p>Easily convert tables and formatted text from any source into clean Markdown, perfect for your technical docs, tutorials, and blog posts.</p>
+      <img src="https://www.whatsnapai.com/ad_image_800_1.png" alt="Converting Tables to Markdown">
      </div>
     </div>
    </section>
 
    <section id="pricing">
     <div class="container">
-     <h2>灵活的订阅方案</h2>
+     <h2>Flexible Subscription Plan</h2>
      <div class="pricing-card">
       <h3>SnapMark Pro</h3>
-      <p class="price">$2.99<span>/月</span></p>
-      <p class="billing-model">10次免费试用结束后开始计费，可随时取消</p>
+      <p class="price">$2.99<span>/month</span></p>
+      <p class="billing-model">Billed after 10 free trials, cancel anytime</p>
       <ul>
-       <li>每日高达 100 次屏幕截取</li>
-       <li>支持多种专业格式导出 (Markdown, LaTeX, HTML+)</li>
-       <li>高级表格与公式识别</li>
-       <li>持续的版本更新</li>
-       <li>优先邮件支持</li>
+       <li>Up to 100 screen captures per day</li>
+       <li>Export to multiple professional formats (Markdown, LaTeX, HTML+)</li>
+       <li>Advanced table and formula recognition</li>
+       <li>Continuous version updates</li>
+       <li>Priority email support</li>
       </ul>
-      <a href="https://pay.paddle.io/hsc_01k1n86j8asnyxjnkexm8m6xya_1x9et8994hydd1q07mhqx1f6c6b9ay32" target="_blank" class="cta-link">升级到 Pro 版本</a>
-      <p class="trust-badge">由我们的合作伙伴 Paddle.com 提供安全的支付处理。</p> 
+      <a href="https://pay.paddle.io/hsc_01k1n86j8asnyxjnkexm8m6xya_1x9et8994hydd1q07mhqx1f6c6b9ay32" target="_blank" class="cta-link">Upgrade to Pro</a>
+      <p class="trust-badge">Secure payment processing by our partner, Paddle.com.</p> 
      </div>
     </div>
    </section>
 
    <section class="container">
-    <h2>常见问题</h2>
+    <h2>Frequently Asked Questions</h2>
     <div class="faq-item">
-     <h4>SnapMark 是如何收费的？</h4>
-     <p>您可以免费下载并使用 SnapMark 10次。试用结束后，您可以选择订阅 Pro 版本以继续使用所有高级功能。我们提供灵活的订阅方案，并可以随时取消。</p>
+     <h4>How is SnapMark priced?</h4>
+     <p>You can download and use SnapMark for free for 10 captures. After the trial ends, you can choose to subscribe to the Pro version to continue using all advanced features. We offer a flexible subscription plan that you can cancel at any time.</p>
     </div>
     <div class="faq-item">
-     <h4>我如何收到我的许可证密钥？</h4>
-     <p>在您完成订阅后，您的许可证密钥将立即由我们的合作伙伴 Paddle.com 发送到您的电子邮箱地址。</p>
+     <h4>How do I receive my license key?</h4>
+     <p>After you complete your subscription, your license key will be sent to your email address immediately by our partner, Paddle.com.</p>
     </div>
     <div class="faq-item">
-     <h4>支持哪些 Windows 版本？</h4>
-     <p>SnapMark 完全兼容 Windows 10 和 Windows 11。</p>
+     <h4>Which versions of Windows are supported?</h4>
+     <p>SnapMark is fully compatible with Windows 10 and Windows 11.</p>
     </div>
     <div class="faq-item">
-      <h4>如果我换了一台新电脑怎么办？</h4>
-      <p>您的 Pro 权限与您的订阅绑定。您只需在新电脑上安装本软件，并使用同一个许可证密钥激活即可。每份订阅允许在合理数量的个人设备上同时激活。您随时可以通过我们的“管理许可证”页面查看和管理您已激活的设备。</p>
+      <h4>What if I get a new computer?</h4>
+      <p>Your Pro access is tied to your subscription. Simply install the software on your new computer and activate it with the same license key. Each subscription allows activation on a reasonable number of personal devices simultaneously. You can view and manage your activated devices at any time through our 'Manage License' page.</p>
    </div>
    </section>
   </main>
@@ -306,13 +306,13 @@
   <footer>
    <div class="container">
     <p>
-     <a href="https://www.whatsnapai.com/terms_of_service.html">服务条款</a> |
-     <a href="https://www.whatsnapai.com/privacy_policy.html">隐私政策</a> |
-     <a href="https://www.whatsnapai.com/refund_policy.html">退款政策</a> |
-     <a href="https://customer-portal.paddle.com/login/cpl_01k1f723kfp8tmq6rn7d3yvwsv" target="_blank">管理许可证</a>
+     <a href="https://www.whatsnapai.com/terms_of_service.html">Terms of Service</a> |
+     <a href="https://www.whatsnapai.com/privacy_policy.html">Privacy Policy</a> |
+     <a href="https://www.whatsnapai.com/refund_policy.html">Refund Policy</a> |
+     <a href="https://customer-portal.paddle.com/login/cpl_01k1f723kfp8tmq6rn7d3yvwsv" target="_blank">Manage License</a>
     </p>
-    <p>联系我们: <a href="mailto:support@whatsnapai.com">support@whatsnapai.com</a></p>
-    <p>&copy; 2025 SnapMark. 保留所有权利。</p>
+    <p>Contact us: <a href="mailto:support@whatsnapai.com">support@whatsnapai.com</a></p>
+    <p>&copy; 2025 SnapMark. All rights reserved.</p>
    </div>
   </footer>
 
