--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>隐私政策 | SnapMark</title>
+    <title>Privacy Policy | SnapMark</title>
     <style>
         :root {
             --primary-color: #0078d4;
@@ -65,54 +65,54 @@
 </head>
 <body>
     <div class="container">
-        <h1>隐私政策</h1>
-        <p class="meta-info">最后更新：2025年8月1日</p>
+        <h1>Privacy Policy</h1>
+        <p class="meta-info">Last updated: August 1, 2025</p>
 
-        <h3>引言</h3>
-        <p>欢迎使用 SnapMark！我们尊重您的隐私，并致力于保护您的个人数据。本隐私政策将告知您，当您访问我们的网站或使用我们的服务时，我们如何处理您的个人数据，并告知您所享有的隐私权利以及法律如何保护您。</p>
+        <h3>Introduction</h3>
+        <p>Welcome to SnapMark! We respect your privacy and are committed to protecting your personal data. This privacy policy will inform you as to how we look after your personal data when you visit our website or use our services, and tell you about your privacy rights and how the law protects you.</p>
 
-        <h2>1. 我们收集的数据类型</h2>
-        <p>我们可能会收集、使用、存储和传输关于您的不同类型的个人数据，具体如下：</p>
+        <h2>1. The Types of Data We Collect</h2>
+        <p>We may collect, use, store, and transfer different kinds of personal data about you as follows:</p>
         <ul>
-            <li><strong>身份数据</strong>：包括您的电子邮箱地址。</li>
-            <li><strong>交易数据</strong>：包括您的购买详情、付款信息摘要（例如信用卡末四位、卡类型）。请注意，完整的支付信息由我们的支付处理商 Paddle 处理，我们不会存储您的完整信用卡信息。</li>
-            <li><strong>技术数据</strong>：包括您的IP地址、浏览器类型和版本、时区设置和位置、操作系统和平台，以及您用于访问本网站的设备上的其他技术信息。</li>
-            <li><strong>使用数据</strong>：包括有关您如何使用我们网站和服务的信息。</li>
+            <li><strong>Identity Data</strong>: Includes your email address.</li>
+            <li><strong>Transaction Data</strong>: Includes details of your purchases, a summary of payment information (e.g., the last four digits of your credit card, card type). Please note that complete payment information is processed by our payment processor, Paddle, and we do not store your full credit card information.</li>
+            <li><strong>Technical Data</strong>: Includes your IP address, browser type and version, time zone setting and location, operating system and platform, and other technology on the devices you use to access this website.</li>
+            <li><strong>Usage Data</strong>: Includes information about how you use our website and services.</li>
         </ul>
 
-        <h2>2. 我们如何收集您的数据</h2>
-        <p>我们通过不同的方法收集您的数据，包括：</p>
+        <h2>2. How We Collect Your Data</h2>
+        <p>We use different methods to collect data from and about you including through:</p>
         <ul>
-            <li><strong>直接互动</strong>：当您购买我们的产品、联系我们获取支持或订阅我们的通讯时，您可能会向我们提供您的身份数据。</li>
-            <li><strong>自动化技术或互动</strong>：当您与我们的网站互动时，我们可能会自动收集技术数据。我们通过使用 Cookie 和其他类似技术来收集这些数据。</li>
-            <li><strong>第三方来源</strong>：我们通过我们的支付合作伙伴 Paddle.com 接收交易数据。当您进行购买时，您将直接向 Paddle 提供您的支付信息。</li>
+            <li><strong>Direct interactions</strong>: You may give us your Identity Data by purchasing our products, contacting us for support, or subscribing to our newsletter.</li>
+            <li><strong>Automated technologies or interactions</strong>: As you interact with our website, we may automatically collect Technical Data. We collect this data by using cookies and other similar technologies.</li>
+            <li><strong>Third-party sources</strong>: We receive Transaction Data from our payment partner, Paddle.com. When you make a purchase, you will provide your payment information directly to Paddle.</li>
         </ul>
 
-        <h2>3. 我们如何使用您的数据</h2>
-        <p>我们仅在法律允许的情况下使用您的个人数据。最常见的情况是：</p>
+        <h2>3. How We Use Your Data</h2>
+        <p>We will only use your personal data when the law allows us to. Most commonly, we will use your personal data in the following circumstances:</p>
         <ul>
-            <li>处理和管理您的购买订单及许可证。</li>
-            <li>向您发送产品更新、欢迎邮件和客户支持信息。</li>
-            <li>管理我们与您的关系，包括通知您我们的服务条款或隐私政策的变更。</li>
-            <li>改进我们的网站、产品、服务、营销和客户关系。</li>
+            <li>To process and manage your purchase orders and licenses.</li>
+            <li>To send you product updates, welcome emails, and customer support messages.</li>
+            <li>To manage our relationship with you, which includes notifying you about changes to our terms or privacy policy.</li>
+            <li>To improve our website, products, services, marketing, and customer relationships.</li>
         </ul>
 
-        <h2>4. 数据共享与披露</h2>
-        <p>我们不会将您的个人数据出售给任何第三方。但我们可能需要与以下第三方共享您的数据，以提供服务：</p>
+        <h2>4. Data Sharing and Disclosure</h2>
+        <p>We do not sell your personal data to any third party. However, we may need to share your data with the following third parties to provide our services:</p>
         <ul>
-            <li><strong>Paddle.com</strong>：我们的在线经销商和支付处理商，负责处理您的付款和订阅。您可以查阅 <a href="https://www.paddle.com/legal/privacy" target="_blank" rel="noopener noreferrer">Paddle的隐私政策</a>。</li>
-            <li><strong>Google Cloud</strong>：我们的后端服务（包括云函数和Firestore数据库）托管在 Google Cloud Platform 上。</li>
-            <li><strong>Resend / Zoho Mail</strong>：我们用于发送交易和支持邮件的服务提供商。</li>
+            <li><strong>Paddle.com</strong>: Our online reseller and payment processor, responsible for processing your payments and subscriptions. You can review <a href="https://www.paddle.com/legal/privacy" target="_blank" rel="noopener noreferrer">Paddle's Privacy Policy</a>.</li>
+            <li><strong>Google Cloud</strong>: Our backend services (including Cloud Functions and Firestore database) are hosted on Google Cloud Platform.</li>
+            <li><strong>Resend / Zoho Mail</strong>: The service providers we use to send transactional and support emails.</li>
         </ul>
 
-        <h2>5. 数据安全</h2>
-        <p>我们已采取适当的安全措施，以防止您的个人数据意外丢失、被未经授权地使用或访问、更改或披露。我们将访问您个人数据的权限限制在有业务需要的员工和合作伙伴范围内。</p>
+        <h2>5. Data Security</h2>
+        <p>We have put in place appropriate security measures to prevent your personal data from being accidentally lost, used or accessed in an unauthorized way, altered, or disclosed. We limit access to your personal data to those employees and partners who have a business need to know.</p>
 
-        <h2>6. 您的法律权利</h2>
-        <p>根据您所在的地区（例如欧盟的GDPR），您对您的个人数据享有一系列权利，包括访问、更正、删除您的数据或撤回同意的权利。如果您希望行使任何这些权利，请与我们联系。</p>
+        <h2>6. Your Legal Rights</h2>
+        <p>Depending on your region (e.g., under the GDPR in the European Union), you have a range of rights in relation to your personal data, including the right to access, correct, erase your data, or withdraw consent. If you wish to exercise any of these rights, please contact us.</p>
         
-        <h2>7. 联系我们</h2>
-        <p>如果您对本隐私政策或我们对您个人数据的处理有任何疑问，欢迎随时通过以下方式与我们联系：</p>
+        <h2>7. Contact Us</h2>
+        <p>If you have any questions about this privacy policy or our privacy practices, please do not hesitate to contact us at:</p>
         <p style="text-align: center; margin: 20px 0;">
             <a href="mailto:support@whatsnapai.com"><strong>support@whatsnapai.com</strong></a>
         </p>
