--- a/refund_policy.html
+++ b/refund_policy.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>退款政策 | SnapMark</title>
+    <title>Refund Policy | SnapMark</title>
     <style>
         :root {
             --primary-color: #0078d4;
@@ -59,39 +59,39 @@
 </head>
 <body>
     <div class="container">
-        <h1>SnapMark 退款政策</h1>
-        <p class="meta-info">最后更新：2025年8月1日</p>
+        <h1>SnapMark Refund Policy</h1>
+        <p class="meta-info">Last updated: August 1, 2025</p>
 
-        <p>感谢您选择 SnapMark。我们致力于提供卓越的产品与服务，并希望您对购买感到完全满意。如果您因任何原因不满意，我们愿意提供帮助。</p>
+        <p>Thank you for choosing SnapMark. We are committed to providing excellent products and services, and we want you to be completely satisfied with your purchase. If for any reason you are not satisfied, we are here to help.</p>
 
-        <h2>14天退款保证</h2>
-        <p>我们为所有首次购买 SnapMark Pro 订阅的用户提供 **14天无理由退款保证**。</p>
-        <p>如果您在购买订阅后的 **14天内** 发现产品不符合您的期望，您可以申请全额退款。退款期限从您支付成功的当天开始计算。</p>
+        <h2>14-Day Money-Back Guarantee</h2>
+        <p>We offer a **14-day no-questions-asked money-back guarantee** for all first-time purchases of a SnapMark Pro subscription.</p>
+        <p>If you find that the product does not meet your expectations within **14 days** of purchasing your subscription, you can request a full refund. The refund period is calculated from the day your payment is successfully processed.</p>
 
-        <h2>退款资格</h2>
+        <h2>Refund Eligibility</h2>
         <ul>
-            <li>此政策仅适用于用户的**首次订阅购买**。</li>
-            <li>续订费用通常不予退还，但我们会根据具体情况酌情处理。如果您忘记取消订阅并被扣费，请尽快与我们联系。</li>
-            <li>通过非官方渠道或第三方经销商购买的许可证，不适用于本退款政策。</li>
+            <li>This policy applies only to a user's **first subscription purchase**.</li>
+            <li>Renewal fees are generally non-refundable, but we will consider them on a case-by-case basis. If you forgot to cancel your subscription and were charged, please contact us as soon as possible.</li>
+            <li>Licenses purchased through unofficial channels or third-party resellers are not eligible for this refund policy.</li>
         </ul>
 
-        <h2>如何申请退款</h2>
-        <p>申请退款非常简单。请通过电子邮件联系我们的支持团队：</p>
+        <h2>How to Request a Refund</h2>
+        <p>Requesting a refund is simple. Please contact our support team via email at:</p>
         <p style="text-align: center; margin: 20px 0;">
             <a href="mailto:support@whatsnapai.com"><strong>support@whatsnapai.com</strong></a>
         </p>
-        <p>在邮件中，请务必提供以下信息，以便我们能快速处理您的请求：</p>
+        <p>In your email, please be sure to provide the following information so we can process your request quickly:</p>
         <ul>
-            <li>您购买时使用的电子邮箱地址。</li>
-            <li>您的订单号或交易ID (您可以在 Paddle 发送的收据邮件中找到它)。</li>
+            <li>The email address you used for the purchase.</li>
+            <li>Your order number or transaction ID (you can find it in the receipt email sent by Paddle).</li>
         </ul>
 
-        <h2>退款处理</h2>
-        <p>在收到您的退款请求后，我们将在2个工作日内进行审核。一经批准，退款将由我们的支付合作伙伴 Paddle.com 立即处理。退款金额通常需要 **5-10个工作日** 才能显示在您的银行或信用卡对账单上，具体时间取决于您的发卡银行。</p>
-        <p>退款成功后，您账户关联的 SnapMark Pro 许可证密钥将被停用。</p>
+        <h2>Refund Processing</h2>
+        <p>Upon receiving your refund request, we will review it within 2 business days. Once approved, the refund will be processed immediately by our payment partner, Paddle.com. It typically takes **5-10 business days** for the refund to appear on your bank or credit card statement, depending on your card-issuing bank.</p>
+        <p>Once the refund is successful, the SnapMark Pro license key associated with your account will be deactivated.</p>
 
-        <h2>联系我们</h2>
-        <p>如果您对我们的退款政策有任何疑问，欢迎随时通过 <a href="mailto:support@whatsnapai.com">support@whatsnapai.com</a> 与我们联系。</p>
+        <h2>Contact Us</h2>
+        <p>If you have any questions about our refund policy, feel free to contact us at <a href="mailto:support@whatsnapai.com">support@whatsnapai.com</a>.</p>
     </div>
 </body>
 </html>
