--- a/terms_of_service.html
+++ b/terms_of_service.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>服务条款 | SnapMark</title>
+    <title>Terms of Service | SnapMark</title>
     <style>
         :root {
             --primary-color: #0078d4;
@@ -59,48 +59,48 @@
 </head>
 <body>
     <div class="container">
-        <h1>服务条款</h1>
-        <p class="meta-info">最后更新：2025年8月1日</p>
+        <h1>Terms of Service</h1>
+        <p class="meta-info">Last updated: August 1, 2025</p>
 
-        <h3>1. 协议概述</h3>
-        <p>本服务条款（“条款”）构成您（“用户”）与whatsnapai（“我们”、“我方”）之间关于您使用 SnapMark 软件（“本软件”）的法律协议。通过下载、安装或使用本软件，即表示您同意受本条款的约束。如果您不同意本条款，请勿使用本软件。</p>
+        <h3>1. Agreement Overview</h3>
+        <p>These Terms of Service ("Terms") constitute a legal agreement between you ("User") and whatsnapai ("us," "we," "our") regarding your use of the SnapMark software ("the Software"). By downloading, installing, or using the Software, you agree to be bound by these Terms. If you do not agree to these Terms, do not use the Software.</p>
 
-        <h2>2. 许可证授予</h2>
-        <p>根据本条款，我们授予您一个有限的、非独占的、不可转让的、可撤销的许可证，以在您拥有或控制的设备上安装和使用本软件，仅供您个人或内部商业使用。</p>
+        <h2>2. License Grant</h2>
+        <p>Subject to these Terms, we grant you a limited, non-exclusive, non-transferable, revocable license to install and use the Software on devices you own or control, solely for your personal or internal business use.</p>
 
-        <h2>3. 免费试用</h2>
-        <p>我们为本软件提供10次免费试用。试用期旨在让您在购买前评估本软件的功能。试用期结束后，您需要购买 Pro 版本订阅才能继续使用本软件的全部功能。</p>
+        <h2>3. Free Trial</h2>
+        <p>We offer a 10-use free trial for the Software. The trial period is intended to allow you to evaluate the Software's functionality before purchase. After the trial period ends, you will need to purchase a Pro version subscription to continue using the full features of the Software.</p>
 
-        <h2>4. 付费订阅与付款</h2>
-        <p>当您从免费试用升级到 SnapMark Pro 时，您同意支付相应的订阅费用。所有付款均由我们的第三方支付合作伙伴 Paddle.com 处理。通过提供支付信息，您同意受 Paddle 的条款和政策约束。订阅将按您选择的周期（例如，按月或按年）自动续订，除非在当前订阅期结束前取消。</p>
+        <h2>4. Paid Subscription and Payment</h2>
+        <p>When you upgrade from the free trial to SnapMark Pro, you agree to pay the applicable subscription fees. All payments are processed by our third-party payment partner, Paddle.com. By providing payment information, you agree to be bound by Paddle's terms and policies. Subscriptions will automatically renew for the period you select (e.g., monthly or annually) unless canceled before the end of the current subscription period.</p>
 
-        <h2>5. 可接受的使用行为</h2>
-        <p>您同意不以下列方式使用本软件：</p>
+        <h2>5. Acceptable Use</h2>
+        <p>You agree not to use the Software in any way that:</p>
         <ul>
-            <li>违反任何适用的法律或法规。</li>
-            <li>对本软件进行反向工程、反编译、反汇编或试图发现其源代码。</li>
-            <li>分发、出租、出借、出售、再许可或以其他方式转让本软件的权利。</li>
-            <li>删除或更改本软件中的任何版权、商标或其他所有权声明。</li>
-            <li>用于任何非法或侵犯他人权利的目的。</li>
+            <li>Violates any applicable laws or regulations.</li>
+            <li>Reverse engineers, decompiles, disassembles, or attempts to discover the source code of the Software.</li>
+            <li>Distributes, rents, leases, sells, sublicenses, or otherwise transfers rights to the Software.</li>
+            <li>Removes or alters any copyright, trademark, or other proprietary notices in the Software.</li>
+            <li>Is for any unlawful purpose or infringes on the rights of others.</li>
         </ul>
 
-        <h2>6. 知识产权</h2>
-        <p>本软件及其所有副本的所有权、所有权权利和知识产权（包括但不限于所有版权、专利、商标和商业秘密）均归whatsnapai 所有。本条款并未将本软件的任何所有权转让给您，仅授予您有限的使用权。</p>
+        <h2>6. Intellectual Property</h2>
+        <p>The ownership, title, and intellectual property rights in and to the Software and all its copies (including but not limited to all copyrights, patents, trademarks, and trade secrets) are owned by whatsnapai. These Terms do not transfer any ownership of the Software to you, but only grant you a limited right of use.</p>
 
-        <h2>7. 终止</h2>
-        <p>如果您未能遵守本条款中的任何规定，本协议将自动终止。协议终止后，您必须立即停止使用本软件并销毁其所有副本。</p>
+        <h2>7. Termination</h2>
+        <p>This agreement will terminate automatically if you fail to comply with any of its provisions. Upon termination, you must immediately cease all use of the Software and destroy all copies of it.</p>
 
-        <h2>8. 免责声明</h2>
-        <p>本软件按“原样”提供，不附带任何形式的明示或暗示担保。我们不保证本软件的功能将满足您的特定要求，也不保证其运行不会中断或没有错误。</p>
+        <h2>8. Disclaimer of Warranty</h2>
+        <p>The Software is provided "as is" without warranty of any kind, either express or implied. We do not warrant that the functions of the Software will meet your specific requirements or that its operation will be uninterrupted or error-free.</p>
 
-        <h2>9. 责任限制</h2>
-        <p>在任何情况下，对于因使用或无法使用本软件而导致的任何间接、偶然、特殊、惩罚性或后果性损害（包括但不限于利润损失、数据丢失或业务中断），我们均不承担任何责任，即使已被告知可能发生此类损害。</p>
+        <h2>9. Limitation of Liability</h2>
+        <p>In no event shall we be liable for any indirect, incidental, special, punitive, or consequential damages (including, but not limited to, loss of profits, data loss, or business interruption) arising out of the use or inability to use the Software, even if we have been advised of the possibility of such damages.</p>
 
-        <h2>10. 条款变更</h2>
-        <p>我们保留随时修改本条款的权利。所有变更将在我们的网站上发布。您在变更发布后继续使用本软件，即表示您接受修订后的条款。</p>
+        <h2>10. Changes to Terms</h2>
+        <p>We reserve the right to modify these Terms at any time. All changes will be posted on our website. Your continued use of the Software after the changes are posted constitutes your acceptance of the revised Terms.</p>
         
-        <h2>11. 联系我们</h2>
-        <p>如果您对本服务条款有任何疑问，请通过以下方式与我们联系：</p>
+        <h2>11. Contact Us</h2>
+        <p>If you have any questions about these Terms of Service, please contact us at:</p>
         <p style="text-align: center; margin: 20px 0;">
             <a href="mailto:support@whatsnapai.com"><strong>support@whatsnapai.com</strong></a>
         </p>
