--- a/thanks.html
+++ b/thanks.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>订阅成功！| SnapMark</title>
+    <title>Subscription Successful! | SnapMark</title>
     <style>
-        /* --- (您的CSS样式保持不变，此处省略以保持简洁) --- */
+        /* --- (Your CSS styles remain unchanged, omitted here for brevity) --- */
         :root { --primary-color: #0078d4; --dark-text: #2d3748; --light-text: #4a5568; --background-color: #f7fafc; --card-background: #ffffff; --border-color: #e2e8f0; }
         body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; margin: 0; background-color: var(--background-color); color: var(--dark-text); line-height: 1.7; }
         .container { max-width: 960px; margin: 0 auto; padding: 0 20px; }
@@ -35,19 +35,19 @@
     <section class="success-section">
         <div class="container">
             <div class="success-card">
-                <h2>🎉 订阅成功！</h2>
-                <p>感谢您订阅 SnapMark Pro！我们已将您的**许可证密钥**和**订单收据**发送至您的邮箱，请注意查收并开始使用吧！</p>
+                <h2>🎉 Subscription Successful!</h2>
+                <p>Thank you for subscribing to SnapMark Pro! We have sent your <strong>license key</strong> and <strong>order receipt</strong> to your email address. Please check your inbox and get started!</p>
 
                 <div class="success-details">
                     <ul>
-                        <li><strong>订阅方案:</strong> SnapMark Pro</li>
-                        <li><strong>确认邮箱:</strong> <span id="customerEmail"></span></li>
-                        <li><strong>订单号:</strong> <span id="transactionId"></span></li>
+                        <li><strong>Subscription Plan:</strong> SnapMark Pro</li>
+                        <li><strong>Confirmation Email:</strong> <span id="customerEmail"></span></li>
+                        <li><strong>Order ID:</strong> <span id="transactionId"></span></li>
                     </ul>
                 </div>
                 
                 <div class="next-steps">
-                    <a href="#" class="cta-link">立即下载应用</a>
+                    <a href="https://storage.googleapis.com/snapmark-installers/SnapmarkWinui_1.2.14.0_x64.msix" class="cta-link">Download the App Now</a>
                 </div>
             </div>
         </div>
@@ -55,18 +55,18 @@
 
     <footer>
         <div class="container">
-            <p>© 2025 SnapMark. 保留所有权利。</p>
+            <p>© 2025 SnapMark. All rights reserved.</p>
         </div>
     </footer>
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-            // 从 URL 中解析参数
+            // Parse parameters from the URL
             const params = new URLSearchParams(window.location.search);
             const transactionId = params.get('transaction_id');
             const customerEmail = params.get('customer_email');
 
-            // 将解析出的数据显示在页面上
+            // Display the parsed data on the page
             if (customerEmail) {
                 document.getElementById('customerEmail').textContent = customerEmail;
             }
